5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1745_1525.log
== TEST (2019-05-15 14:12:58) 
-- CODE:
vi = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

i = 0

while(vb > vr):
	vi = vi + (vi*vb) - vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:13:19) 
-- CODE:
vi = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

i = 0

while(vb > vr):
	vi = vi + ((vi*vb) - vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:15:35) 
-- CODE:
vi = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))
qvi = vi
i = 0

while(vb > vr):
	qvi = qvi + ((qvi*vb) - vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:16:34) 
-- CODE:
vi = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))
qvi = vi
i = 0

while(vb > vr):
	qvi = qvi + ((qvi+vb) - vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:18:46) 
-- CODE:
vi = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvi = vi * vb
qvr = qvi - vr
i = 0

while(qvi > qvr):
	vi = vi + ((vi*vb) - vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:21:59) 
-- CODE:
vi = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvi = vi
i = 0

while(qvi > 1000):
	qvi = qvi + ((qvi * vb)-vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:33) 
-- CODE:
vi = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))


i = 0

while(vi > 1000):
	vi = vi + ((vi * vb)-vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:23:34) 
-- CODE:
vi = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvi = vi
qvb = vb
qvr = vr
i = 0

while(qvi > 1000):
	qvi = qvi + ((qvi * qvb)-qvr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:10) 
-- CODE:
vi = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvi = vi + ((vi * vb)-vr)
i = 0

while(qvi > 1000):
	qvi = qvi + ((qvi * vb)-vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:07) 
-- CODE:
vi = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

vi = 0
i = 0

while(vi > 1000):
	vi = vi + ((vi * vb)-vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:55) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

vo = 0
i = 0

while(vo > 1000):
	vo = vo + ((vo * vb)-vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:24) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvo = vo
i = 0

while(qvo > 1000):
	qvo = qvo + ((qvo * vb)-vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:31) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvo = vo
i = 0

while(qvo > 1000):
	qvo = qvo + ((qvo * vb)-vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:30:19) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

i = 0

while(i > 1000):
	vo = vo + ((vo * vb)-vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:36:01) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvo = vo
i = 0

while(qvo > 1000):
	qvo = qvo + ((qvo * vb)-vr)
	i = i + 1
print(i)
-- EXECUTION TIME:
0.165661
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:

-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
:::0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:38:00) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

soma = 0
i = 0

while(i > 1000):
	soma = soma + ((vo * vb)-vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:38:45) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

soma = 0
i = 0

while(i > 1000):
	soma = soma + (vo * vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:32) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

soma = 0
i = 0

while(i > 1000):
	vo = vo + (vo * vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:39) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

soma = 0
i = 0

while(i > 1000):
	vo = vo + (vo * vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:42:28) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

i = 0

while((vo*vb)-vr > 1000):
	vo = vo + (vo * vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:43:53) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

soma = 0
i = 0
q = (vo * vb) - vr

while(q > 1000):
	vo = vo + (vo * vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:44:16) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

soma = 0
i = 0
q = (vo * vb) - vr

while(q > 1000):
	soma = soma + (vo * vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:44:32) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

i = 0
q = (vo * vb) - vr

while(q > 1000):
	vo = vo + (vo * vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:44:56) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

q = (vo * vb) - vr
i = 0

while(q > 1000):
	vo = vo + (vo * vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:10) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvo = vo
qvb = vb
i = 0

while(i > 1000):
	qvo = qvo + (qvo * vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:46:56) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvo = vo
qvb = vb
i = 0

while(i > 1000):
	qvo = qvo + (qvo * qvb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:51:50) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

i = 0

while(i > 1000):
	vo = vo + (vo + vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:01) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

i = 0

while(vo > 1000):
	vo = vo + (vo + vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    c = p1 + p2 + p3
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:34) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

soma
i = 0

while(vo > 1000):
	soma = soma + (vo + vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:41) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

soma
i = 0

while(vo > 1000):
	soma = soma + (vo + vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:48) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

soma
i = 0

while(vo > 1000):
	soma = soma + (vo + vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:00) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

soma = 0
i = 0

while(vo > 1000):
	soma = soma + (vo + vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:22) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvo = vo
i = 0

while(qvo > 1000):
	qvo = qvo + (qvo + vb)-vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:53) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

i = 0

while(vo > 1000):
	vo = vo + (vo * vb)
	qvo = vo - vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:00:18) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

i = 0

while(i > 1000):
	vo = vo + (vo * vb)
	qvo = vo - vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:00:49) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

vo = 0
i = 0

while(i > 1000):
	vo = vo + (vo * vb)
	qvo = vo - vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:01:07) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvo = 0
i = 0

while(i > 1000):
	qvo = qvo + (vo * vb)
	qvo = vo - vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:04:11) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvo = 0
i = 0

while(i > 1000):
	qvo = qvo + (qvo * vb)
	qvo = vo - vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:05:08) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvo = vo
i = 0

while(i > 1000):
	qvo = qvo + (qvo * vb)- vr
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:06:33) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

qvo = 0
i = 0

while(i > 1000):
	qvo = qvo + ((qvo + vb)- vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:07:51) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

vo = 0
i = 0

while(i > 1000):
	vo = vo + ((vo + vb)- vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:14:09) 
-- CODE:
vo = int(input(":"))
vb = int(input(":"))
vr = int(input(":"))

i = 0

while(vo > 1000):
	vo = vo + ((vo + vb)- vr)
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
